# MagicalLiopleurodon

./: .gitignore
BaseStation/: Main.py  Serial.py  lio.config
BaseStation/.cache/v/cache/: lastfailed
BaseStation/MLIotLibrary/: Lio.py  MLServer.py  __init__.py
BaseStation/MLIotLibrary/DatabaseService/: INodeRepo.py
BaseStation/MLIotLibrary/Entities/: Audit.py  Host.py  Node.py  NodeTelemetry.py  User.py
BaseStation/MLIotLibrary/Network/: CommunicationService.py  XBee.py
BaseStation/MLIotLibrary/RadioService/: MLRadioServer.py  __init__.py
BaseStation/MLIotLibrary/RestApiService/: MLApiServer.py  XBeeConsumer.py  __init__.py
BaseStation/MLIotLibrary/Shared/: Comm.py  CommunicationService.py  Config.py  Messages.py  Singleton.py  SqlSession.py  XBee.py
BaseStation/RestInterface/: Server.py
Nodes/: CMakeLists.txt
Nodes/Arduino/: platformio.ini  sketch_jan17a.ino
Nodes/Arduino/hello_world/: hello_world.ino
Nodes/Arduino/ml_arduino/ml_arduino_test/: ml_arduino.h  ml_arduino_test.ino
Nodes/Arduino/src/: CMakeLists.txt  sketch_jan17a.ino
Nodes/Arduino/src/hello_world/: hello_world.ino
Nodes/Arduino/src/ml_arduino/ml_arduino_test/: ml_arduino_test.ino
Nodes/Arduino/src/xbee libs/xbee-arduino/examples/Echo_Callbacks/: Echo_Callbacks.ino
Nodes/Arduino/src/xbee libs/xbee-arduino/examples/ZdpScan/: ZdpScan.ino
Nodes/Arduino/src/xbee wrapper/wrappedxbee/: wrappedxbee.ino
Nodes/Arduino/xbee wrapper/wrappedxbee/: wrappedxbee.ino
Nodes/Fixes/: platformio.ini
Nodes/Fixes/src/: lio.cpp  lio.hpp  main.cpp
Nodes/cmake/: FindAria.cmake
(+64 files in other folders)
